--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
    <div class="header">
     <div class="logo">
-        <img src="img/pngwing.com.png">
+        <img src="pngwing.com.png">
         <div class="options">
         <button class="lang">English</button>
         <button class="login">Sign In</button>
